# saga-ops-insight

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pom.xml
.github/workflows/: ci.yml  release.yml
django/: pyproject.toml
django/config/: settings.py  urls.py
django/domain/: enums.py  risk_policy.py
django/ports/: cache.py  signal_reader.py
django/services/: ingestion.py  risk.py
django/signals/: _fake_cache.py  _redis_cache.py  _services.py  apps.py  middleware.py  models.py  orm_adapter.py  serializers.py  urls.py  views.py
django/signals/migrations/: 0001_initial.py
django/tests/: conftest.py  test_views.py
docs/: ARCHITECTURE.md  design-patterns.md
python/: Dockerfile  pyproject.toml
python/signal_harbor/: config.py  main.py
python/signal_harbor/adapters/: db_pool.py  postgres.py  redis_cache.py
python/signal_harbor/api/: auth.py  metrics.py  router.py  schemas.py
python/signal_harbor/domain/: event_bus.py  risk_policy.py  signal_builder.py
python/signal_harbor/ports/: signal_writer.py
python/signal_harbor/services/: ingestion.py  risk.py
python/tests/: conftest.py  test_api.py  test_risk_policy.py
scripts/: render_readme_demo.py
src/main/resources/: application.properties
src/test/resources/: application-test.properties
terraform/aws/: main.tf  outputs.tf  variables.tf
terraform/azure/: main.tf  outputs.tf  variables.tf
terraform/gcp/: main.tf  outputs.tf  variables.tf
terraform/modules/k8s-app/: main.tf  (+2 more)
terraform/on-prem/: main.tf  outputs.tf  variables.tf
(+26 files in other folders)
