[project]
name = "signal-harbor-django"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6",
    "djangorestframework>=3.15,<4",
    "redis>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-django>=4.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
testpaths = ["tests"]
