[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-harbor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0,<0.112",
    "uvicorn[standard]>=0.30.0,<0.31",
    "sqlalchemy>=2.0.30,<2.1",
    "redis>=5.0.4,<6",
    "pydantic-settings>=2.3.0,<3",
    "prometheus-client>=0.20.0,<0.21",
    "httpx>=0.27.0,<0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0,<0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
